# rust_puzzles

./: Cargo.toml  README.md  TODO.md  build.rs
puzzles_inc/: generated-games.h
src/: hello.c  main.rs  puzzle_wrap.rs  shapes.rs
